--- a/Project/homepage.html
+++ b/Project/homepage.html
@@ -69,23 +69,26 @@
                         <p id="second" style="padding: 0px !important; text-align: center;width: 100% !important ;">00</p>
                     </div>
                 </div>
-                <button class="carousel_stylle_button prev">&#129104;</button>
-                <button class="carousel_stylle_button next">&#129106;</button>
+                <button class="whbutton carousel_stylle_button prev">&#129104;</button>
+                <button class="whbutton carousel_stylle_button next">&#129106;</button>
             </div>
             <div class="vpb">
             <button class="view-products-btn">View All Products</button>
             </div>
+            <hr>
             <div class="title flex" style="height: fit-content;width: fit-content;">
                 <div style="display:flex;padding: 10%;">
                 <div style="background-color: red; padding: 5px; border-radius: 20%;"></div>
                 <p class="font1" style="color: red !important;font-weight: bold!important; padding-left: 10px; ">Categories</p>
                 </div>
             </div>  
-            <div class="title__con flex font2" style="font-weight: bold;">
-                <p style="padding: 0% !important;">Browse by categories</p>
-            </div>
-            <button class="carousel_stylle_button prev">&#129104;</button>
-            <button class="carousel_stylle_button next">&#129106;</button>
+            <div class="flex">
+                <div class="title__con flex font2" style="font-weight: bold;width: 100%;">
+                    <p style="padding: 0% !important;">Browse by categories</p>
+                </div>
+                    <button class="whbutton carousel_stylle_button prev">&#129104;</button>
+                    <button class="whbutton carousel_stylle_button next">&#129106;</button>
+                </div>
 
 
 
